# pfw-lunabotics-2026

./: .gitignore  LICENSE  README.md  fastrtps_no_shm.xml
mission_control_vm/: README.md  mission_control.py  run_gui.sh  setup_ethernet.sh  setup_ssh_keys.sh  setup_vm.sh  setup_vm_deps.sh
scripts/: competition.sh  debug.sh  jetson_max_performance.sh  pin_cores.sh  preflight.sh  scenario1_perception_test.sh  scenario2_full_mission.sh  serial_monitor.py
src/luna_msgs/: CMakeLists.txt  package.xml
src/luna_msgs/msg/: AdaptiveParams.msg  ExcavationCommand.msg  ExcavationStatus.msg  HazardSummary.msg  LocalizationQuality.msg
src/lunabotics_autonomy/: package.xml  setup.cfg  setup.py
src/lunabotics_autonomy/config/: mission_params.yaml
src/lunabotics_autonomy/launch/: autonomy.launch.py
src/lunabotics_autonomy/lunabotics_autonomy/autonomy/: excavation_bridge.py  mission_controller.py
src/lunabotics_control/: package.xml  setup.cfg  setup.py
src/lunabotics_control/config/: control_params.yaml  pico_params.yaml  servo_params.yaml
src/lunabotics_control/launch/: control.launch.py
src/lunabotics_control/lunabotics_control/: cmd_vel_relay.py  pico_bridge.py  safety_monitor.py  servo_driver.py  system_watchdog.py  teleop_joy.py  teleop_keyboard.py
src/lunabotics_control/pico/: gpio_dump.py  main.py  test_encoder_ppr.py  test_hx711.py
src/lunabotics_control/scripts/: cmd_vel_relay  teleop_keyboard
src/lunabotics_description/: CMakeLists.txt  package.xml
src/lunabotics_description/meshes/: rover_collision.stl  rover_visual.stl
src/lunabotics_description/urdf/: lunabot.urdf.xacro  lunabot_gazebo.xacro
src/lunabotics_gazebo/: CMakeLists.txt  package.xml
src/lunabotics_gazebo/launch/: arena_easy.launch.py  arena_ucf.launch.py  lunar_world.launch.py  nasa_arena.launch.py
src/lunabotics_gazebo/models/apriltag_board/: model.config  model.sdf
src/lunabotics_gazebo/models/arena_frame_nasa/: model.config  model.sdf
src/lunabotics_gazebo/models/arena_frame_ucf/: model.config  model.sdf
src/lunabotics_gazebo/worlds/: arena_easy.world  arena_nasa.world  arena_ucf.world  lunar_arena.world
src/lunabotics_localization/: package.xml  setup.cfg  setup.py
src/lunabotics_localization/config/: ekf_params.yaml  ekf_params_hardware.yaml  ekf_params_imu_only.yaml  point_lio_l2.yaml
src/lunabotics_localization/launch/: localization.launch.py
src/lunabotics_navigation/: package.xml  setup.py
src/lunabotics_navigation/config/: nav2_params.yaml  nav_bt_no_spin.xml
src/lunabotics_navigation/launch/: bringup.launch.py  navigation.launch.py
src/lunabotics_navigation/lunabotics_navigation/: reactive_wander.py  wander_test.py  waypoint_navigator.py
src/lunabotics_navigation/maps/: blank_arena.pgm  blank_arena.yaml  ucf_arena.pgm  ucf_arena.yaml
src/lunabotics_navigation/rviz/: lunabotics.rviz
src/lunabotics_navigation/scripts/: waypoint_navigator
src/lunabotics_perception/: package.xml  setup.cfg  setup.py  setup.py.backup
src/lunabotics_perception/config/: perception_params.yaml
src/lunabotics_perception/launch/: perception.launch.py
src/lunabotics_perception/lunabotics_perception/perception/: localization_quality_monitor.py  unified_obstacle_detector.py  zone_detector.py
src/point_lio_ros2/src/: laserMapping.cpp
src/unilidar_sdk2/unitree_lidar_ros2/src/unitree_lidar_ros2/include/: unitree_lidar_ros2.h
